--- a/src/config/algs/masaj_mamujoco.yaml
+++ b/src/config/algs/masaj_mamujoco.yaml
@@ -11,8 +11,8 @@ role: "msj"
 
 # Ambient dependent
 continuous_actions: True
-action_selector: "gaussian_latent"
-use_latent_normal: True
+action_selector: "gaussian"
+use_latent_normal: False # era false xd
 
 # Encoder-decoder for actions
 action_encoder: "obs_reward"
@@ -40,7 +40,7 @@ obs_role: True # Pass roles as observations to critics
 n_roles: 3
 n_role_clusters: 5
 state_latent_dim: 32
-action_latent_dim: 20
+action_latent_dim: 69
 mixing_embed_dim: 32
 n_head: 4  
 
