--- a/src/config/envs/mujoco_multi.yaml
+++ b/src/config/envs/mujoco_multi.yaml
@@ -2,8 +2,8 @@ env: mujoco_multi
 
 env_args:
   episode_limit: 1000
-  scenario: "HalfCheetah-v2"
-  agent_conf: "6x1"
+  scenario: "manyagent_swimmer"
+  agent_conf: "10x2"
   agent_obsk: 1
   obs_add_global_pos: False
 t_max: 2000000
