--- a/src/config/algs/masaj_mamujoco.yaml
+++ b/src/config/algs/masaj_mamujoco.yaml
@@ -25,8 +25,8 @@ epsilon_anneal_time_exp: 70000
 mask_before_softmax: True
 
 # Learners hyperparameters
-batch_size: 64
-target_update_interval: 200
+batch_size: 100
+target_update_interval: 1
 lr: 0.001
 c_lr: 0.001
 v_lr: 0.001
@@ -34,19 +34,21 @@ td_lambda: 0.8
 role_interval: 5
 role_action_spaces_update_start: 50000
 use_role_value: False
+double_value: False
 
 # Network structure hyper-parameters
+rnn_hidden_dim: 128
 obs_role: True # Pass roles as observations to critics
 n_roles: 3
 n_role_clusters: 5
 state_latent_dim: 32
-action_latent_dim: 69
+action_latent_dim: 20
 mixing_embed_dim: 32
 n_head: 4  
 
 # Buffer hyper-parameters
-buffer_size: 10000
-burn_in_period: 100
+buffer_size: 1000
+burn_in_period: 1000 #100
 
 # Logging parameters
 log_interval: 5000 # Log summary of stats after every {} timesteps
