--- a/src/config/default.yaml
+++ b/src/config/default.yaml
@@ -3,7 +3,7 @@
 # --- pymarl options ---
 runner: "masaj" # Runs 1 env for an episode
 mac: "role_controller" # Basic controller
-env: "mujoco_multi" # Environment name
+env: mujoco_multi" # Environment name
 env_args: {} # Arguments for the environment
 batch_size_run: 1 # Number of environments to run in parallel
 test_nepisode: 10 # Number of episodes to test for
