--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -56,12 +56,13 @@ RUN mkdir /install
 WORKDIR /install
 RUN pip install setuptools
 
-
+RUN pip install gym==0.10.8
+RUN pip install mujoco_py
 #RUN git clone https://github.com/oxwhirl/sacred.git /install/sacred && cd /install/sacred && python3 setup.py install
 RUN pip install git+https://github.com/IDSIA/sacred.git
 
 WORKDIR /mujoco_py
-RUN pip install git+https://github.com/schroederdewitt/multiagent_mujoco.git
+# RUN pip install git+https://github.com/schroederdewitt/multiagent_mujoco.git
 # Delay moving in the entire code until the very end.
 #ENTRYPOINT ["/mujoco_py/vendor/Xdummy-entrypoint"]
 # CMD ["pytest"]
