--- a/src/config/algs/masaj_mamujoco.yaml
+++ b/src/config/algs/masaj_mamujoco.yaml
@@ -31,7 +31,7 @@ target_update_interval: 1
 lr: 0.0005
 c_lr: 0.0005
 v_lr: 0.0005
-td_lambda: 0.8
+td_lambda: 0 #0.8
 role_interval: 5
 role_action_spaces_update_start: 0 #50000
 use_role_value: False
@@ -47,11 +47,11 @@ n_role_clusters: 5
 state_latent_dim: 32
 action_latent_dim: 20
 mixing_embed_dim: 64
-n_head: 4  
+n_head: 4
 
 # Buffer hyper-parameters
 buffer_size: 5000
-burn_in_period: 1000 #100
+burn_in_period: 100 #100
 
 # Logging parameters
 log_interval: 5000 # Log summary of stats after every {} timesteps
@@ -61,3 +61,6 @@ learner_log_interval: 5000 # Log training stats every {} timesteps
 # Enviroments parameters
 env_args:
   state_last_action: False
+
+obs_agent_id: False # Include the agent's one_hot id in the observation
+obs_last_action: False # Include the agent's last action (one_hot) in the observation
