--- a/src/config/envs/mujoco_multi.yaml
+++ b/src/config/envs/mujoco_multi.yaml
@@ -3,6 +3,7 @@ env: mujoco_multi
 env_args:
   episode_limit: 1000
   scenario: "Humanoid-v2"
+  scenario_name: "Humanoid-v2"
   agent_conf: "9|8"
   agent_obsk: 1
   obs_add_global_pos: False
