--- a/requirements2.txt
+++ b/requirements2.txt
@@ -1,1 +1,16 @@
-poogee
+numpy
+scipy
+pyyaml
+matplotlib
+pygame
+torch
+torchvision
+snakeviz
+pytest
+probscale
+imageio
+scikit-learn
+Jinja2
+pymongo
+tensorboard-logger
+gym
